# campaign-simulator

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/src/api/: dependencies.py  main.py  middleware.py
backend/src/api/v1/: campaigns.py  router.py  simulations.py  sse.py
backend/src/campaign/application/commands/: create_campaign.py  run_simulation.py
backend/src/campaign/application/dtos/: campaign_dto.py  simulation_dto.py
backend/src/campaign/application/queries/: get_campaign.py  list_campaigns.py
backend/src/campaign/domain/entities/: audience_segment.py  campaign.py  creativity.py
backend/src/campaign/domain/events/: campaign_events.py
backend/src/campaign/domain/repositories/: campaign_repository.py
backend/src/campaign/domain/services/: rule_evaluator.py  simulation_engine.py
backend/src/campaign/domain/value_objects/: budget.py  campaign_status.py  metric_type.py  performance_rule.py
backend/src/campaign/infrastructure/messaging/: event_publisher.py
backend/src/shared/domain/: __init__.py  aggregate_root.py  domain_event.py  entity.py  value_object.py
backend/src/shared/infrastructure/: celery_app.py  database.py  redis_client.py  settings.py
backend/tests/integration/: test_campaign_api.py
backend/tests/unit/domain/: test_campaign_aggregate.py  test_rule_evaluator.py  test_simulation_engine.py
frontend/: .gitignore  Dockerfile  package.json  (+1 more)
(+44 files in other folders)
